--- a/.travis.yml
+++ b/.travis.yml
@@ -53,6 +53,7 @@ before_script:
   - if [[ $TRAVIS_PHP_VERSION != 'hhvm' && $TRAVIS_PHP_VERSION != 'hhvm-nightly' && $TRAVIS_PHP_VERSION != '7.0' ]]; then echo "extension = mongo.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini; fi
   - composer self-update
   - composer require --ignore-platform-reqs doctrine/common:~2.4 doctrine/dbal:${DOCTRINE_VERSION} doctrine/orm:${DOCTRINE_VERSION} symfony/framework-bundle:${SYMFONY_VERSION} symfony/symfony:${SYMFONY_VERSION} symfony/framework-bundle:${SYMFONY_VERSION}
+  - if [[ $TRAVIS_PHP_VERSION == 'hhvm' || $TRAVIS_PHP_VERSION == 'hhvm-nightly' || $TRAVIS_PHP_VERSION == '7.0' ]]; then composer require --dev mongofill/mongofill=dev-master --no-update; fi
   - if [[ $TRAVIS_PHP_VERSION != 'hhvm' && $TRAVIS_PHP_VERSION != 'hhvm-nightly' && $TRAVIS_PHP_VERSION != '7.0' ]]; then composer install; fi
   - if [[ $TRAVIS_PHP_VERSION == 'hhvm' || $TRAVIS_PHP_VERSION == 'hhvm-nightly' || $TRAVIS_PHP_VERSION == '7.0' ]]; then composer install --ignore-platform-reqs; fi
 
